# mechanics-benchmarking

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: configure.sh  devcontainer.json
examples/: params_base.json  params_benchmark.json  params_grid.json  problem_2d_medium.json  problem_3d_medium.json  problem_validation.json
src/: agent_distributor.h  algorithms.cpp  algorithms.h  grid.cpp  grid.h  main.cpp  mechanics_solver.h  perf_utils.h  problem.h
src/solvers/: base_solver.cpp  base_solver.h  grid_solver.cpp  grid_solver.h  reference_solver.cpp  reference_solver.h  solver_helper.h  transposed_grid_solver.cpp  transposed_grid_solver.h  transposed_solver.cpp  transposed_solver.h
